<resources>
    <string name="app_name">Eva3</string>
    <string name="listado_de_reservas">Listado de reservas</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="no_estas_registrado_registrate">¿No estás registrado? Regístrate</string>
    <string name="login">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_cuenta_inicia_sesion">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="registro">Regístrate</string>
    <string name="bienvenido_a_parkplanner">Bienvenido a ParkPlanner</string>
    <string name="crear_reserva">Crear reserva</string>
    <string name="reservas_disponibles">Reservas disponibles</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="reserva">Reserva</string>
    <string name="nombre">Nombre</string>
    <string name="patente">Patente</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="volver">Volver</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="nueva_contraseña">Nueva contraseña</string>
    <string name="nuevo_correo_electronico">Nuevo correo electrónico</string>
    <string name="reservatitulo">Reserva</string>
    <string name="nombre_reserva">Nombre reserva</string>
    <string name="patente_del_vehiculo">Patente del vehículo</string>
    <string name="guardar_reserva">Guardar reserva</string>
    <string name="ver_reservas">Ver reservas</string>
    <string name="patente_del_veh_culo">Patente\n</string>
    <string name="contrase_a">Contraseña\n</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="iniciar_sesi_n">Iniciar sesión\n</string>
    <string name="logo_de_la_app">Logo de la App</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="cerrar_sesion1">Cerrar Sesión</string>
    <string name="nuevo_correo">Nuevo correo</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="borrar_cuenta">Borrar cuenta</string>
    <string name="volver_al_men">Volver al Menú</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="guardar">Guardar</string>
    <string name="ver_estacionamientos">Ver Estacionamientos</string>
    <string name="informaci_n_del_estacionamiento">Información del Estacionamiento</string>
</resources>
