<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarReservaActivity">

    <!-- EditText para el nombre de la reserva -->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNombreReserva"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp" />

    <!-- EditText para la patente -->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPantete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/patente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNombreReserva"
        android:layout_marginTop="16dp" />

    <!-- Botón para guardar los cambios -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPantete"
        android:layout_marginTop="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
